--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -10,7 +10,7 @@
 \def \iemail{s.butterfill@warwick.ac.uk}
 %\date{}
 
-\input{$HOME/Documents/submissions/preamble_steve_paper}
+\input{$HOME/Documents/submissions/preamble_steve_paper2}
 
 
 
@@ -113,25 +113,31 @@ So, on this view, those without metarepresentational abilities are not in a posi
 
 While we lack a detailed theory of the evidential basis of goal ascription,
 it is certain that the evidence for goal ascription sometimes includes considerations about which ends actions are means to.
-Suppose an observer faces an action but cannot identify which end (or ends) it could be a means to.
-This may limit her ability to identify the action's goal (or goals) by depriving her of evidence.
+Suppose an observer faces an action but cannot identify ends to which it could be a means.
+This may prevent her from recognizing the action's goal%
+\footnote{
+It is possible that some actions have more than one goal.
+To reduce parenthetical qualifications we shall write as if actions had only one goal.  
+All of our key claims and arguments are consistent with the possibility of actions with more than one goal.
+} 
+ by depriving her of evidence.
 To illustrate, contrast two cases of tool use.
 In one case, someone uses a reamer to  juice  a lime; in the other, someone else scores shag with a lame to prevent a loaf from cracking.
-Without testimony, 
+Without communication, repetition or convention,
 an observer familiar with reamers but not lames 
-is less likely to be able to identify the goals of this second action than the first.
+may be able to identify the goal of the first action only.
 As this illustrates, ignorance about to which ends actions are means can be an obstacle to goal ascription.%
 \footnote{
 This is not to say that no observer could ever identify the goal of any action she fails to recognise as a means to achieving that goal.
 Surely opaque means are not in every case an insurmountable obstacle to goal ascription.
-Our point is that opaque means are sometimes an obstacle to goal ascription because they deprive observers of evidence.
+Our point is just that opaque means \emph{sometimes}  deprive observers of evidence and so prevent goal ascription.
 }
 Call this the problem of opaque means.
 
 Some of the most plausibly unique aspects of human cognition depend on our abilities to recognise the goals of novel behaviours involving tools, and of communicative gestures.
-The problem of opaque means is likely to arise in both cases 
-if goal ascription is based on entirely observation 
-(so that the possibility of interaction is ignored).
+If goal ascription is based on entirely observation 
+(so that the possibility of interaction is ignored),
+the problem of opaque means is likely to arise in both cases.
 We have just seen an illustration of how the problem of opaque means arises where tools are used to unfamiliar ends.
 Relatedly, it is also likely to arise where actions involve multiple steps that do not form a familiar sequence, can occur in various orders and can be interspersed among other activities;
 as in preparing spirit from grain, for example.
@@ -142,30 +148,152 @@ as in preparing spirit from grain, for example.
 %*This is slightly tricky because Byrne wants a pure behaviour reading account with no understanding of intention.  
 %Stress that this is consistent with supposing that goals are ascribed.
 %}
- The problem of opaque means also affects communicative actions 
- because these are generally  directed to goals which the actions are means to realising only because others recognise them as means to realising those goals (that is, they involve a Gricean circle). 
+
+The problem of opaque means also affects communicative actions 
+ because these characteristically have  goals which the actions are means to realising only because others recognise them as means to realising those goals (a Gricean circle). 
 To illustrate, consider an experiment by
 ***ref whose two main conditions are depicted in figure *fig.
 The pictures in the figure stand for what participants, who were chimpanzees, saw.
-The question was whether participants would be able to work out which of two containers contained a reward.
-In the condition depicted in the left panel, participants saw a chimpanzee trying but failing to reach for the reward. 
+The question was whether participants would be able to work out which of two containers concealed a reward.
+In the condition depicted in the left panel, participants saw a chimpanzee trying but failing to reach for the correct container. 
 Participants had no problem getting the reward in this case, suggesting that they understood the goal of the failed reach.
-In the condition depicted in the right panel, a human pointed to the reward location.
+In the condition depicted in the right panel, a human pointed at the correct container.
 Participants did not reliably  get the reward in this case, suggesting that they failed to understand the goal of the pointing action.
-This may be because of the problem of opaque means: 
-participants could identify to what end a failed reach might be a means, but not to what end a communicative gesture might be a means.
+This may be because of the problem of opaque means.
+One theoretically possible explanation of these findings is that the participants could identify to which end a failed reach might be a means, but not to which end a communicative gesture might be a means.%
+\footnote{
+*quote Moll \& Tomasello
+}
+Whatever the truth about the chimpanzees' performance,
+this possibility illustrates how the problem of opaque means can be an obstacle to exploiting communicative gestures.
+
 
 ***FIGURE***
 
-In what follows we shall suggest that abilities to engage in joint action with others provides a route to knowledge of the goals of other agents' actions  that avoids the problem of opaque means.
+This, then, is the problem of opaque means:
+failures to identify to which ends actions are means can impair goal ascription.
+The problem is potentially a problem for interpreters given the standard, purely observational models of interpretation.
+It is not our intention to suggest that the problem of opaque means is a problem \emph{for models of interpretation}.
+Rather, it is a potential problem \emph{for interpreters}.
+The existence of this problem shows, we shall argue, that models of interpretation based on pure observation are less powerful than models taking into account the possibility of interaction.
+They are less powerful in this sense: 
+some routes to knowledge of the goals of actions are available only where a model of interpretation takes the possibility of interaction into account.
+In what follows we shall suggest that abilities to engage in joint action with others provides a route to knowledge of the goals of other agents' actions  which avoids the problem of opaque means.
 This is one way in which moving away from a purely observational model of interpretation yields a richer evidential base for ascriptions.
-But first we consider a second, related problem.
 
 
-\section{The problem of false belief}
+\section{Joint action}
+\label{joint_action}
+Our overall aim is to defend this claim:
+there are routes to knowledge of the goals of others' actions
+which are closed to
+interpreters who merely observe their targets
+but open to 
+interpreters capable of interacting with their targets.
+As a preliminary to defending this claim,
+we need to specify the types of interaction which are relevant.
+We shall focus on joint action.
+
+***Much disagreement about what it is.
+Necessary condition is distributive goal.
+If people want to disagree, this is only terminological.
+
+
+
+\section{Your-goal-is-my-goal: a route to knowledge}
+If an interpreter is able to interact with her targets,
+if she is not limited to merely observing them,
+how might this provide her with a route to knowledge of the goals of their actions?
+The intuitive idea we started with hinges on joint action, a particular form of interaction in which the actions of two or more agents are directed to a single goal (see section \vref{joint_action}).
+Our intuitive idea was this:
+if an interpreter is engaged in joint action with her target, 
+it's easy for the interpreter to know what the goal of her target's actions is because this goal is the goal of her own actions.
+So if she knows the goal of her own actions and she knows that she is engaged in joint action with her target,
+then she already knows what the goal of her target's actions are.
+%Roughly speaking, the interpreter can reason about her target thus: your goal is my goal.
+
+Of course this intuitive idea won't work as it stands.  
+For the inference it captures relies on the premise that the interpreter and her target are engaged in joint action.
+But for the interpreter to know this premise---for her to know that they are engaged in joint action---it seems she must   already know which goal her target's actions are directed to.
+Worse,
+on many accounts of joint action the truth of the premise  entails that the interpreter knows the goal of her target's actions.%
+\footnote{
+*ref}
+Apparently, then, engaging in joint action presupposes, and therefore cannot be a source of, knowledge of others' goals. 
+
+Fortunately there is a way around this.  
+For there are various cues which signal that one agent is prepared to engage in joint action with another.  
+Seeing a new parent struggling to get his twin pram on to the bus, you grab the front wheels and make eye contact, raising your eyebrows and smiling.  
+In this way you signal both that you are disposed to help 
+and 
+that are about to engage in joint action with the stranger.  
+Since the stranger is fully committed to getting his pram onto the bus,
+he knows what the goals of his own actions will be.
+This makes enables him to infer the goal of your immanent actions: 
+your goal is his goal, to get the pram onto the bus.
+
+Our suggestion, then, is that the following inference characterises a route to knowledge of others’ goals:
+%
+\begin{enumerate}
+\item We are about to engage in some joint action\footnote{
+*What notion of joint action is needed here?  Any will do as long as it involves distributive goals.
+}
+or other 
+%(for example, because you have made eye contact with me while I was in the middle of attempting to do something).
+
+\item I am not about to change which goal my actions will be directed to.
+
+\end{enumerate}
+%
+Therefore:
+%
+\begin{enumerate}[resume]
+%
+\item The goal of your actions will be my goal.
+\end{enumerate}
+%
+Call this the \emph{your-goal-is-my-goal inference}.  
+To say that this inference characterises a route to knowledge implies two things.  
+First, in some cases it is possible to know the premises, 1–2, without already knowing the conclusion, 3.  
+Second, in some cases knowing the two premises puts one in a position to know the conclusion.  
+We shall consider these points in turn
+
+
+Is it ever possible to know the premises without first knowing the conclusion?  
+Consider the first premise.  
+Sometimes 
+in the right contexts
+you can see in others’ facial expressions, engaging gestures or synchronized bodily movements that they are about to engage in joint action with you.  
+Exploiting these indicators does not typically depend on knowing the particular contents of any of their beliefs, desires or goals.  
+Expressions, gestures and movements can naturally indicate imminent jointness in much the way that can also naturally indicate emotions.\footnote{
+Ideas along these lines are suggested by the discussion of \emph{emergent coordination} in \citet{Knoblich:2010fk}.
+}  
+Of course these indicators provide no guarantee that others are about to helpfully engage in joint action with you.  
+But they are sufficiently reliable to ground knowledge in some cases.  
+So knowing the first two premises of the above inference does not require already knowing which particular goals others have.  
+
+On this point not everything needs to rest on indicators of imminent jointness.
+It is sometimes possible to know that others are about to engage in joint action with you even without relying on such indicators.  
+Thanks to widespread dispositions to act jointly, in some situations it is reasonable to take for granted that others are disposed to be helpful and will act jointly with you.  
+For example, this is often so for children surrounded by family or familiar adults who are having difficulty with a task.  
+And in some cultures parents with struggling small children on public transport (say) can reasonably take for granted that those around them will act jointly with them when the need is clear.
+
+Does knowing the premises of the your-goal-is-my-goal inference sometimes put one in a position to know the conclusion?  
+If you know that others are about to engage in joint action with you, it is sometimes reasonable to infer that the outcome to which the joint action will be directed is the very outcome you are currently concerned with.  
+Given the account of joint action in Section 6 above, this means that the others each have an individual goal whose fulfilment requires this outcome to occur.  
+So knowing the outcome to which a joint action will be directed puts one in a position to know something about which goals the others have.  
+Of course the inference this rests on is not deductive and will only be correct when certain background conditions are met.  
+These background conditions include the others having largely true beliefs concerning which outcome you are concerned with; I return to this point below.  
+
+
+
+
+\section{The problem of false belief [move to later]}
 We have just seen that 
 failure to identify to which ends actions are means can impair goal ascription; this was the problem of opaque means.
-Another problem for purely observational goal ascription arises from the interdependence of beliefs and goals.
+Another problem 
+affecting goal ascription given purely observational models of interpretation
+ arises from the interdependence of beliefs and goals.
 To illustrate, 
 imagine sitting at a table on which two closed opaque boxes each contain an object; one contains an owl, the other a cat.
 If the goal of your action is to retrieve the owl, 
